--- a/helloapp/build.gradle
+++ b/helloapp/build.gradle
@@ -12,7 +12,15 @@ plugins {
 
     // Apply the application plugin to add support for building a CLI application
     id 'application'
+
+    // ratpack
+    ////id 'io.ratpack.ratpack-groovy'
+    //id 'io.ratpack.ratpack-groovy' version '1.6.1'
+    ////id 'io.ratpack.ratpack-groovy'
 }
+
+// ratpack
+//apply plugin: "io.ratpack.ratpack-groovy"
 
 repositories {
     // Use jcenter for resolving dependencies.
@@ -28,6 +36,8 @@ dependencies {
     // Use the awesome Spock testing and specification framework
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 
+    // this may not be required for ratpack - also, did not work
+    //classpath "io.ratpack:ratpack-gradle:1.7.6"
 
     //Slf4j needs one of these: 
     //1. org.slf4j.Logger
